# remote_agent

./: .clang-format  .env.example  .gitignore  CMakeLists.txt  conan.profile  conanfile.txt  config.example.yaml  task.example.yaml
.zed/: tasks.json
include/: agent_error.h  config.h  daemon.h  file_utils.h  ipc.h  mail.h  publisher.h  runner.h  runner_log.h  serial_port.h  subscriber.h  task.h  timer.h
proto/: mail_to.proto
src/: config.cpp  daemon.cpp  file_utils.cpp  ipc.cpp  mail.cpp  main.cpp  runner.cpp  runner_log.cpp  serial_port.cpp  task.cpp  timer.cpp
